<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp">


        <!-- Linear Layout for Image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/slikaItem"
                android:layout_width="158dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>
            <!-- Linear Layout for Text Views -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nazivItem"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ellipsize="end"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="5dp"
                    android:text="@string/naziv_biljke"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/upozorenjeItem"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ellipsize="end"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="5dp"
                    android:text="@string/tekst_upozorenja"
                    android:textSize="10sp" />

                <!-- Linear Layout for Korist TextViews -->

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:baselineAligned="false"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/korist1Item"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:text="@string/korist_1"
                        android:textSize="10sp"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="5dp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/korist2Item"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:text="@string/korist_2"
                        android:textSize="10sp"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="5dp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/korist3Item"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:text="@string/korist_3"
                        android:textSize="10sp"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="5dp"
                        tools:ignore="SmallSp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>
