<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/slikaItem"
                android:layout_width="158dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nazivItem"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/naziv_biljke_bot"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" /> <!-- Added margin -->

                <!-- Added margin -->

                <TextView
                    android:id="@+id/porodicaItem"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/porodica"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/klimatskiTipItem"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/prvi_klimatski_tip"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" /> <!-- Added margin -->

                <TextView
                    android:id="@+id/zemljisniTipItem"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/prvi_tip_zemlji_ta"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" /> <!-- Added margin -->

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
